--- a/bike-rack-pybossa-project/template.html
+++ b/bike-rack-pybossa-project/template.html
@@ -76,10 +76,10 @@
 
     <div class="row">
         <div class="column">
-            <img src="http://3.bp.blogspot.com/_9-coSRlRBkE/TFn6JVwas0I/AAAAAAAAAOw/RaDRLpiT4yY/s320/bad+bike+rack.JPG">
+            <img id="source" src="http://3.bp.blogspot.com/_9-coSRlRBkE/TFn6JVwas0I/AAAAAAAAAOw/RaDRLpiT4yY/s320/bad+bike+rack.JPG">
         </div>
         <div class="column">
-            <img src="http://1.bp.blogspot.com/_9-coSRlRBkE/TFoC20vVqrI/AAAAAAAAAPA/O6mz9FUQQYA/s320/bad+bike+rack+2.JPG">
+            <img id='target' src="http://1.bp.blogspot.com/_9-coSRlRBkE/TFoC20vVqrI/AAAAAAAAAPA/O6mz9FUQQYA/s320/bad+bike+rack+2.JPG">
         </div>
         <!-- <p id="source"></p> -->
         <!-- <h1 id="target"></h1> -->
