Improves heading styling in template

--- a/bike-rack-pybossa-project/template.html
+++ b/bike-rack-pybossa-project/template.html
@@ -91,11 +91,11 @@
     <div style="background-color: #eaeaea">
 
         <div class="row">
-            <h2 align="center">Are those the same bike-racks?</h2>
+            <h1 align="center">Are those the same bike-racks?</h1>
         </div>
 
-        <div class="row" style="color: white; background-color: #546E7A">
-            <h2 align="center">Picture</h2>
+        <div class="row" style="color: white; display: ''; background-color: #97ADB7">
+            <h2 align="center"><b>Picture</b></h2>
 
         </div>
         <div class="row">
@@ -107,8 +107,8 @@
                 <img id='target' class="displayed" align="center" height=300px src="">
             </div>
         </div>
-        <div class="row" style="color: white; background-color: #546E7A">
-            <h2 align="center">Location</h2>
+        <div class="row" style="color: white; display: ''; background-color: #97ADB7">
+            <h2 align="center"><b>Location</b></h2>
         </div>
         <div class="row">
 
@@ -117,8 +117,8 @@
                 <leaflet align="center" width=90% height="280px " markers="markers " bounds="bounds "></leaflet>
             </div>
         </div>
-               <div class="row" style="color: white; background-color: #546E7A">
-            <h2 align="center">Type</h2>
+               <div class="row" style="color: white; display: ''; background-color: #97ADB7">
+                   <h2 align="center"><b>Type</b></h2>
         </div>
         <div class="row ">
             <div class="column " style="border-right:4px solid #ffffff; ">
@@ -128,8 +128,8 @@
                 <img id='targetracktype' class="displayed " width=30% src=" ">
             </div>
         </div>
- <div class="row" style="color: white; background-color: #546E7A">
-            <h2 align="center">Capacity</h2>
+ <div class="row" style="color: white; display: ''; background-color: #97ADB7">
+            <h2 align="center"><b>Capacity</b></h2>
         </div>
         <div class="row">
             <div class="column " align="center " style="border-right:4px solid #ffffff; ">
